<resources>

    <string name="menu_create_trip">Create Trip</string>
    <string name="menu_find_trip">Find Trip</string>
    <string name="app_name">MobileHitchhiker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_trip">Create Trip</string>
    <string name="find_trip">Find Trip</string>
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="title_activity_find_trip">FindTripActivity</string>
    <string name="add_source">Add Source</string>
    <string name="add_destination">Add Destination</string>
    <string name="title_activity_add_source">AddSourceActivity</string>
    <string name="title_activity_add_dest">AddDestActivity</string>
    <string name="trip_start_time">Choose Trip Start Time</string>
    <string name="trip_end_time">Choose Trip End Time</string>
    <string name="intro_trip_info">Enter trip details</string>
    <string name="start_location_label">Start location (City, Country):</string>
    <string name="end_location_label">End location (City, Country):</string>
    <string name="alert_label">Sorry!</string>
    <string name="start_location_not_supplied_message">Start location must be specified \n(City, Country).</string>
    <string name="end_location_not_supplied_message">End location must be specified \n(City, Country).</string>
    <string name="location_not_resolved_message">Location was not resolved. \nWrite (City, Country).</string>
    <string name="title_activity_trip_map">TripMap</string>
    <string name="trip_map_label">Your trip</string>
    <string name="title_activity_location_update">LocationUpdateActivity</string>
    <string name="start_here_checkbox">Start here</string>
    <string name="pick_date">Pick date</string>
    <string name="menu_show_contacts">Contact</string>
    <string name="invalid_coordinates">Can not resolve current location</string>

</resources>
