<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center_horizontal" android:padding="10px"
	>

    <TextView android:id="@+id/intro_trip_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="10px"
		android:layout_marginBottom="15px" 
		style="@style/intro"
		android:text="@string/intro_trip_info" />
    
    <TextView
        android:id="@+id/start_location_label"
        style="@style/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_trip_info"
        android:layout_marginBottom="5px"
        android:layout_marginLeft="10px"
        android:text="@string/start_location_label" />

	<EditText android:id="@+id/start_location"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/start_location_label"
		android:layout_marginLeft="10px" 
		android:layout_marginBottom="5px"
		style="@style/edit_text" />	
		
	<TextView
	    android:id="@+id/end_location_label"
	    style="@style/label"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/start_location"
	    android:layout_marginBottom="5px"
	    android:layout_marginLeft="10px"
	    android:text="@string/end_location_label" />

	<EditText android:id="@+id/end_location"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/end_location_label"
		android:layout_marginLeft="10px" 
		android:layout_marginBottom="5px"
		style="@style/edit_text" />

	<Button
	    android:id="@+id/button_find"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/end_location"
	    android:layout_marginTop="51dp"
	    android:layout_toRightOf="@+id/button_show"
	    android:text="@string/find_trip" />

	<Button
	    android:id="@+id/button_show"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/button_find"
	    android:layout_alignBottom="@+id/button_find"
	    android:layout_alignLeft="@+id/end_location"
	    android:layout_marginLeft="16dp"
	    android:text="@string/create_trip" />

	<Button
	    android:id="@+id/button_date"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/end_location"
	    android:onClick="showDatePickerDialog"
	    android:text="@string/pick_date" />

	<CheckBox
	    android:id="@+id/checkBoxStart"
	    style="@style/checkbox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/intro_trip_info"
	    android:layout_marginLeft="18dp"
	    android:layout_toRightOf="@+id/intro_trip_info"
	    android:checked="false"
	    android:text="@string/start_here_checkbox" />

</RelativeLayout>
